--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <meta content="Ricardo Semião e Castro" name="Author"/>
         <link href="/site_assets/icon.png" rel="icon" type="image/png"/>
         <link href="/site_assets/icon.png" rel="shortcut icon" type="image/png"/>
-        <title>
-            Ricardo Semião | Welcome!
-        </title>
+        <title>Ricardo Semião | Welcome!</title>
         <link href="/site_assets/site_structure.css" rel="stylesheet"/>
         <link href="/site_assets/site_style.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -19,46 +17,30 @@
             <nav>
                 <ul>
                     <li>
-                        <a class="site-nav-link" href="/">
-                            Home
-                        </a>
+                        <a class="site-nav-link" href="/">Home</a>
                     </li>
                     <li>
-                        <a class="site-nav-link" href="/cv.html">
-                            CV
-                        </a>
+                        <a class="site-nav-link" href="/cv.html">CV</a>
                     </li>
                     <li>
-                        <a class="site-nav-link" href="/rfcd/">
-                            RFCD
-                        </a>
+                        <a class="site-nav-link" href="/rfcd/">RFCD</a>
                     </li>
                     <li>
-                        <a class="site-nnav-link" href="/varutils/">
-                            Varutils
-                        </a>
+                        <a class="site-nnav-link" href="/varutils/">Varutils</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <div id="titlecard">
-            <h1>
-                Ricardo Semião e Castro
-            </h1>
+            <h1>Ricardo Semião e Castro</h1>
         </div>
         <main id="home">
             <section id="intro">
                 <div class="multicolumn">
                     <div class="column-text">
-                        <h2>
-                            Welcome!
-                        </h2>
-                        <p>
-                            I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check my info below!
-                        </p>
-                        <p>
-                            In the navbar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.
-                        </p>
+                        <h2>Welcome!</h2>
+                        <p>I'm a master's student in economics at FGV-EESP, with wide interests in statistics, data science, and programming. Check my info below!</p>
+                        <p>In the navbar, you can find my CV (in portuguese), and the pages for some of my projects: an educational R book, and a R package for VAR models.</p>
                     </div>
                     <div class="column-img">
                         <img src="site_assets/profile_picture.jpg" alt="Profile Picture" style="width: 100%;">
@@ -66,139 +48,86 @@
                 </div>
             </section>
             <section id="socials">
-                <h2 class="homepage-section">
-                    Socials
-                </h2>
+                <h2 class="homepage-section">Socials</h2>
                 <ul>
                     <li>
-                        <a href="https://github.com/ricardo-semiao">
-                            <i class="fab fa-github"></i>
-                             Github
-                        </a>
+                        <a href="https://github.com/ricardo-semiao"><i class="fab fa-github"></i> Github</a>
                     </li>
                     <li>
-                        <a href="mailto:ricardo.semiao@outlook.com">
-                            <i class="fas fa-envelope"></i>
-                             Email
-                        </a>
+                        <a href="mailto:ricardo.semiao@outlook.com"><i class="fas fa-envelope"></i> Email</a>
                     </li>
                     <li>
-                        <a href="https://linkedin.com/in/ricardo-semiao">
-                            <i class="fab fa-linkedin"></i>
-                             Linkedin
-                        </a>
+                        <a href="https://linkedin.com/in/ricardo-semiao"><i class="fab fa-linkedin"></i> Linkedin</a>
                     </li>
                     <li>
-                        <a href="https://stackoverflow.com/users/13048728">
-                            <i class="fab fa-stack-overflow"></i>
-                             Stack Overflow
-                        </a>
+                        <a href="https://stackoverflow.com/users/13048728"><i class="fab fa-stack-overflow"></i> Stack Overflow</a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/ricardo_semiao">
-                            <i class="fab fa-twitter"></i>
-                             Twitter
-                        </a>
+                        <a href="https://twitter.com/ricardo_semiao"><i class="fab fa-twitter"></i> Twitter</a>
                     </li>
                 </ul>
             </section>
             <section id="projects">
-                <h2 class="homepage-section">
-                    My Projects
-                </h2>
+                <h2 class="homepage-section">My Projects</h2>
                 <div class="multicolumn">
                     <div class="column-card">
-                        <p>
-                            Academic articles/tasks:
-                        </p>
+                        <p>Academic articles/tasks:</p>
                         <ul>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/article-covid-svardiff">
-                                    article-covid-svardiff
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/article-covid-svardiff">article-covid-svardiff</a>
                             </li>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/article-econometrics1">
-                                    article-econometrics1
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/article-econometrics1">article-econometrics1</a>
                             </li>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/task-econometrics2">
-                                    task-econometrics2
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/task-econometrics2">task-econometrics2</a>
                             </li>
                         </ul>
                     </div>
                     <div class="column-card">
-                        <p>
-                            Educational materials:
-                        </p>
+                        <p>Educational materials:</p>
                         <ul>
                             <li>
-                                <a href="https://ricardo-semiao.github.io/rfcd/">
-                                    rfcd
-                                </a>
+                                <a href="https://ricardo-semiao.github.io/rfcd/">rfcd</a>
                             </li>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/course-python">
-                                    course-python
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/course-python">course-python</a>
                             </li>
                         </ul>
                     </div>
                     <div class="column-card">
-                        <p>
-                            Code packages:
-                        </p>
+                        <p>Code packages:</p>
                         <ul>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/varutils">
-                                    varutils
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/varutils">varutils</a>
                             </li>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/tree/main/packages">
-                                    template_injector
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/tree/main/packages">template_injector</a>
                             </li>
                         </ul>
                     </div>
                     <div class="column-card">
-                        <p>
-                            Freelance and challenges:
-                        </p>
+                        <p>Freelance and challenges:</p>
                         <ul>
                             <li>
-                                <a href="https://github.com/mevaldt/diversified_crypto">
-                                    diversified_crypto
-                                </a>
+                                <a href="https://github.com/mevaldt/diversified_crypto">diversified_crypto</a>
                             </li>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/challenge-constdev">
-                                    challenge-constdev
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/challenge-constdev">challenge-constdev</a>
                             </li>
                         </ul>
                     </div>
                     <div class="column-card">
-                        <p>
-                            Miscellaneous:
-                        </p>
+                        <p>Miscellaneous:</p>
                         <ul>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">
-                                    This site
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io/">This site</a>
                             </li>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/misc-allocator-ga">
-                                    misc-allocator-ga
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/misc-allocator-ga">misc-allocator-ga</a>
                             </li>
                             <li>
-                                <a href="https://github.com/ricardo-semiao/misc-general">
-                                    misc-general
-                                </a>
+                                <a href="https://github.com/ricardo-semiao/misc-general">misc-general</a>
                             </li>
                         </ul>
                     </div>
@@ -208,10 +137,7 @@
         <footer id="site-footer">
             <div>
                 <p>
-                    <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io">
-                        <i class="fab fa-github"></i>
-                         View source-code
-                    </a>
+                    <a href="https://github.com/ricardo-semiao/ricardo-semiao.github.io"><i class="fab fa-github"></i> View source-code</a>
                 </p>
             </div>
         </footer>
